force-app/main/default/objects/ccrz__E_TaxRate__c/ccrz__E_TaxRate__c.object-meta.xml
<CustomObject>
    <description>Tax Rate.</description>
    <label>CC Tax Rate</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Tax Rate Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>