force-app/main/default/objects/ccrz__E_TaxRate__c/fields/ccrz__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CountryCode__c</fullName>
    <description>Country Code</description>
    <label>Country Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>