force-app/main/default/objects/ccrz__E_TaxRate__c/fields/ccrz__StateCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StateCode__c</fullName>
    <description>State Code</description>
    <label>State Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>