force-app/main/default/objects/ccrz__E_TaxRate__c/fields/ccrz__TaxRate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxRate__c</fullName>
    <description>Tax Rate</description>
    <label>Tax Rate</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>