force-app/main/default/objects/ccrz__E_TaxRate__c/fields/ccrz__TaxRateId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxRateId__c</fullName>
    <description>Tax Rate ID</description>
    <externalId>true</externalId>
    <label>Tax Rate Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>