force-app/main/default/objects/ccrz__E_TaxRate__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__TaxRateId__c</columns>
    <columns>ccrz__TaxRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>